--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,7 +2,6 @@
 <resources>
     <string name="app_name">MiPokedex</string>
 
-    <string name="POKÉDEX">Search</string>
-    <string name="POKEDEX">POKÉDEX</string>
+    <string name="pokedexString">POKÉDEX</string>
 
 </resources>
