--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MiPokedex</string>
 
-    <string name="POKEDEX">Search</string>
+    <string name="pokedexString">POKEDEX</string>
 
 </resources>
